--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 PKLot_dataset/train/_annotations.coco.json filter=lfs diff=lfs merge=lfs -text
+archive1.zip filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+PKLot_dataset/*/*.json filter=lfs diff=lfs merge=lfs -text
 archive.zip filter=lfs diff=lfs merge=lfs -text
