--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ archive1.zip filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 PKLot_dataset/*/*.json filter=lfs diff=lfs merge=lfs -text
 archive.zip filter=lfs diff=lfs merge=lfs -text
+achive1.zip filter=lfs diff=lfs merge=lfs -text
