--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@ archive1.zip filter=lfs diff=lfs merge=lfs -text
 PKLot_dataset/*/*.json filter=lfs diff=lfs merge=lfs -text
 archive.zip filter=lfs diff=lfs merge=lfs -text
 achive1.zip filter=lfs diff=lfs merge=lfs -text
+*.pt filter=lfs diff=lfs merge=lfs -text
+weights/best.pt filter=lfs diff=lfs merge=lfs -text
