--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.29.0
-opencv-python-headless==4.10.0.82
-pandas==2.2.2
-torch==2.3.0
-ultralytics==8.2.0
+opencv-python-headless==4.9.0.80
+pandas==2.0.3
+torch==2.0.1
+ultralytics==8.0.145
+numpy==1.24.4
